test_programs/compile_failure/global_without_value/src/main.nr
pub  global X: [Field];

fn main() {}